--- a/frame2.html
+++ b/frame2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="yellow">
+<body bgcolor="blue">
     <h1>FRAME2</h1>
 </body>
 </html>
